--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "inquirer": "^9.1.0",
-    "jest": "^29.0.1"
+    "inquirer": "^8.2.4",
+    "jest": "^29.0.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "fs-extra": "^10.1.0"
